Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
@@ -128,212 +128,210 @@ IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
-
-
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
