Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
@@ -106,11 +106,11 @@ Incrível processo de produção em massa de panela de barro. <BR/>fábrica de c
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="../index_arquivos/DOWNLOADS/
-LINK⚫
+Quiosque na beira do Rio divisa de SP e Minas
 .html" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/sjq2Pa4uO4Y/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+Quiosque na beira do Rio divisa de SP e Minas
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="../index_arquivos/DOWNLOADS/
