Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -242,15 +242,15 @@ Incrível processo de produção em massa de panela de barro. fábrica de cerâm
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+GGU BBU 꾸뿌 - 다섯번째의상- 20231007 - UMC MOTORSHOW 12th New Face - 모델 직캠 - 4K 60P MODEL FANCAM
 .zip">
-NOME🔴
+GGU BBU 꾸뿌 - 다섯번째의상- 20231007 - UMC MOTORSHOW 12th New Face - 모델 직캠 - 4K 60P MODEL FANCAM
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+Quiosque na beira do Rio divisa de SP e Minas
 .zip">
-NOME🔴
+Quiosque na beira do Rio divisa de SP e Minas
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
