Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
@@ -114,11 +114,11 @@ Quiosque na beira do Rio divisa de SP e Minas
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="../index_arquivos/DOWNLOADS/
-LINK⚫
+GGU BBU 꾸뿌 - 다섯번째의상- 20231007 - UMC MOTORSHOW 12th New Face - 모델 직캠 - 4K 60P MODEL FANCAM
 .html" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/DBlCTNmpY1Y/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+GGU BBU 꾸뿌 - 다섯번째의상- 20231007 - UMC MOTORSHOW 12th New Face <BR/> 모델 직캠 - 4K 60P MODEL FANCAM
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="../index_arquivos/DOWNLOADS/
