Update 1 - Copia.html

--- a/index_arquivos/TV/1 - Copia.html
+++ b/index_arquivos/TV/1 - Copia.html
@@ -48,6 +48,9 @@ img {
 <a href="../../index.html" target="_self">
 <div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
 <!----------------------------------------------------------->
+<a href="TV/BUSCA.html" target="_self">
+<div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>LISTA</FONT></p></div></a>
+<!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <button><a href="
 XTREME TV.html
