--- a/index_arquivos/TV/TV/BUSCA.html
+++ b/index_arquivos/TV/TV/BUSCA.html
@@ -255,21 +255,21 @@ Tela Viva Tv Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Retro Plus TV Ao Vivo
 .html">
-NOME🔴
+Retro Plus TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Carioca Internacional Ao Vivo
 .html">
-NOME🔴
+Tv Carioca Internacional Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Confiego Ao Vivo
 .html">
-NOME🔴
+Tv Confiego Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
