--- a/index_arquivos/TV/TV/BUSCA.html
+++ b/index_arquivos/TV/TV/BUSCA.html
@@ -273,21 +273,21 @@ Tv Confiego Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Classique Western TV Ao Vivo
 .html">
-NOME🔴
+Classique Western TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Runtime Ação Ao Vivo
 .html">
-NOME🔴
+Runtime Ação Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+ULB TV Ao Vivo
 .html">
-NOME🔴
+ULB TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
