--- a/index_arquivos/TV/TV/BUSCA.html
+++ b/index_arquivos/TV/TV/BUSCA.html
@@ -369,33 +369,33 @@ Tv J.SID Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+ABC Brasil Ao Vivo
 .html">
-NOME🔴
+ABC Brasil Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Top Mix Tv Filmes Ao Vivo
 .html">
-NOME🔴
+Top Mix Tv Filmes Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+MyTime Movie Network - Brasil Ao Vivo
 .html">
-NOME🔴
+MyTime Movie Network - Brasil Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+BLITS TV Ao Vivo
 .html">
-NOME🔴
+BLITS TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Rede QDM Ao Vivo
 .html">
-NOME🔴
+Rede QDM Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
