--- a/index_arquivos/TV/TV/BUSCA.html
+++ b/index_arquivos/TV/TV/BUSCA.html
@@ -399,39 +399,39 @@ Rede QDM Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Grjngo Ao Vivo
 .html">
-NOME🔴
+Grjngo Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Tv Adorando Jesus Ao Vivo
 .html">
-NOME🔴
+Tv Adorando Jesus Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Christmas TV Ao Vivo
 .html">
-NOME🔴
+Christmas TV Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Classique TV 2 Ao Vivo
 .html">
-NOME🔴
+Classique TV 2 Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Runtime Romance Ao Vivo
 .html">
-NOME🔴
+Runtime Romance Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
-LINK🔴
+Runtime Família Ao Vivo
 .html">
-NOME🔴
+Runtime Família Ao Vivo
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="index_arquivos/
